apps/authelia/resources/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authelia
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints: [websecure]
  routes:
    - kind: Rule
      match: Host(`authelia.cyphers.app`)
      services:
        - name: authelia
          namespace: authelia
          port: 80
  tls:
    secretName: production-cyphers-app-tls
